# bioinf

./: CMakeLists.txt  README.md  bioinf.cpp  bioinf.h  debrujin.cpp  debrujin.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  log.cpp  log.h  test.cpp  util.cpp  util.h
data/: Thermotoga_petrophila.fa  ncbi_link.txt
